--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,8 +91,9 @@
             <p> Hi, I'm Roberto Siu Lemus, <span>Help Desk Analyst I  <a href="https://www.linkedin.com/company/elevance-health/mycompany/" target="_blank"> at  Elevance Health</a></span>
                and <span><a href="https://SIUNETWORKSGITHUB.ME">A little more about me (click here)</a></span> 
                <span><e-mail>roberto.siu@siunetworksgithub.onmicrosoft.com</e-mail></span> 
-               <span>Cellphone 305-440-9192</span>
-              and I've focused on making cloud My Second Home . 
+               <span>Cellphone 305-440-9192, living in Miami dade </span>
+                and I've focused on making cloud My Second Home. 
+	    </p>    
                
          </br>
       </br>
