Update my structure, create main.js file in my SIU-RESUME folder local

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,15 +89,15 @@
             <h2>ABOUT ME</h2>
 
             <p> Hi, I'm Roberto Siu Lemus, <span>Help Desk Analyst I  <a href="https://www.linkedin.com/company/elevance-health/mycompany/" target="_blank"> at  Elevance Health</a></span>
-               and <span><a href="https://SIUNETWORKSGITHUB.ME">A little more about me (click here)</a></span> 
+               and <span><a href="https://SIUNETWORKSGITHUB.ME" target="_blank">A little more about me (click here)</a></span> 
                <span><e-mail>roberto.siu@siunetworksgithub.onmicrosoft.com</e-mail></span> 
-               <span>Cellphone 305-440-9192, living in Miami dade </span>
+               <span>Cellphone 305-440-9192, living in Miami Dade </span>
                 and I've focused on making cloud My Second Home. 
 	    </p>    
                
          </br>
       </br>
-       I built this page as part of my <span><a href="https://github.com/SIUNETWORKSGitHub/az-resume " target="_blank">Personal Project called My Siu Resume.</a></span>
+       I built this page as part of my <span><a href="https://github.com/SIUNETWORKSGitHub/SIU-RESUME" target="_blank">Personal Project called My Siu Resume.</a></span>
             
 
          </div> <!-- end .main-col -->
