--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,7 @@
                
          </br>
       </br>
-       I built this page as part of my <span><a href="https://github.com/SIUNETWORKSGitHub/SIU-RESUME" target="_blank">Personal Project called My Siu Resume.</a></span>
+       I built this page as part of my <span><a href="https://github.com/SIUNETWORKSGitHub/SIU-RESUME" target="_blank">Personal Project called Siu Resume.</a></span>
             
 
          </div> <!-- end .main-col -->
